[package]
name = "herdr"
version = "0.6.6-cocapn"
edition = "2021"
build = "build.rs"
description = "herdr + cocapn-core: agent multiplexer meets fleet management"
license = "AGPL-3.0-or-later"
repository = "https://github.com/SuperInstance/herdr-cocapn"
homepage = "https://github.com/SuperInstance/herdr-cocapn"
keywords = ["terminal", "tui", "ai", "agents", "multiplexer", "fleet"]
categories = ["command-line-utilities"]
include = ["src/**/*", "assets/sounds/*", "README.md", "LICENSE", "Cargo.toml"]

[dependencies]
base64 = "0.22.1"
bincode = { version = "2", features = ["serde"] }
bytes = "1"
cocapn-core = { path = "/tmp/herdr-cocapn" }
crossterm = "0.29"
ctrlc = "3"
libc = "0.2"
portable-pty = "0.9"
png = "0.17"
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
toml = "0.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
unicode-width = "0.2"

[[example]]
name = "fleet"
path = "examples/fleet.rs"
